--- a/src/main/resources/templates/new-job.html
+++ b/src/main/resources/templates/new-job.html
@@ -8,7 +8,7 @@
 
 <div class="container body-content">
 
-    <form th:object="${jobForm}" method="post">
+    <form  th:object="${jobForm}" method="post" >
 
         <div class="form-group">
             <label th:for="name">Name</label>
@@ -26,6 +26,36 @@
         </div>
 
         <!-- TODO #5 - Create <select> dropdowns for other job fields -->
+
+        <div class="form-group">
+            <label th:for="location">Location</label>
+            <select th:field="*{location}">
+                <option th:each="location : *{locations}"
+                        th:value="${location}"
+                        th:text="${location.value}"></option>
+            </select>
+            <div th:errors="*{location}"></div>
+        </div>
+
+        <div class="form-group">
+            <label th:for="positionType">Position Type</label>
+            <select th:field="*{positionType}">
+                <option th:each="positionType : *{positionTypes}"
+                        th:value="${positionType}"
+                        th:text="${positionType.value}"></option>
+            </select>
+            <div th:errors="*{positionType}"></div>
+        </div>
+
+        <div class="form-group">
+            <label th:for="coreCompetency">Skill</label>
+            <select th:field="*{coreCompetency}">
+                <option th:each="coreCompetency : *{coreCompetencies}"
+                        th:value="${coreCompetency}"
+                        th:text="${coreCompetency.value}"></option>
+            </select>
+            <div th:errors="*{coreCompetency}"></div>
+        </div>
 
         <input type="submit" value="Add Job" />
     </form>
