--- a/src/main/resources/templates/job-detail.html
+++ b/src/main/resources/templates/job-detail.html
@@ -7,10 +7,34 @@
 <div th:replace="fragments :: page-header"></div>
 
 <div class="container body-content">
-
     <!-- // TODO #2 - display the job fields, one per row -->
-
+<form th:object="${someJob}"  th:action="'id=' + *{id}">
+<!--    <form th:object="${someJob}">-->
+    <table th:fragment="single-job" class="job-listing">
+        <tr>
+            <th>Name</th>
+            <td th:text="*{name}"></td>
+        </tr>
+        <tr>
+            <th>Employer</th>
+            <td th:text="*{employer}"></td>
+        </tr>
+        <tr>
+            <th>Location</th>
+            <td th:text="*{location}"></td>
+        </tr>
+        <tr>
+            <th>Position Type</th>
+            <td th:text="*{positionType}"></td>
+        </tr>
+        <tr>
+            <th>Skill</th>
+            <td th:text="*{coreCompetency}"></td>
+        </tr>
+    </table>
+</form>
 </div>
+
 
 </body>
 </html>
